--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
     .fnt-ert-px {
         font-family: "erta pixeled";
-        src: url(ert-px-regular.woff);
+        src: url(ert-px-regular.otf);
         font-weight: 500;
         font-size: x-large;
         font-style: normal;
@@ -114,4 +114,5 @@ button:hover {
     color: cyan;
 
 }
+
 
